Stop stretching of images

--- a/css/style.css
+++ b/css/style.css
@@ -83,5 +83,3 @@ body {
     color: orchid; 
     text-shadow: 2px 2px 4px #000000;
 }
-.stop-stretch {
-    
